# simple-file-mirror

./: .travis.yml  README.md  appveyor.yml  dumb-file-mirror.cabal  simple-dumb-mirror.cabal  stack.yaml
src/: Main.hs
