name:                dumb-file-mirror
version:             0.1.0.0
synopsis:            A dumb tool to mirror changes in a directory between hosts
description:         Please see README.md
homepage:            https://github.com/githubuser/dumb-file-mirror#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
copyright:           2016 FP Complete
category:            Network
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

executable dumb-file-mirror
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base < 5
                     , bytestring
                     , bytestring-builder
                     , classy-prelude-conduit
                     , conduit-extra
                     , directory
                     , filepath
                     , fsnotify
                     , optparse-simple
                     , word8
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/dumb-file-mirror
