name:                dumb-file-mirror
version:             0.1.0.0
synopsis:            A dumb tool to mirror changes in a directory between hosts
description:         Please see README.md
homepage:            https://github.com/fpco/dumb-file-mirror#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
copyright:           2016 FP Complete
category:            Network
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

executable dumb-file-mirror
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_dumb_file_mirror
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9 && < 5
                     , bytestring
                     , classy-prelude-conduit >= 1.0
                     , conduit-extra
                     , directory
                     , filepath
                     , fsnotify-conduit
                     , hspec
                     , optparse-simple
                     , temporary
                     , word8
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fpco/dumb-file-mirror
